addded smoothing.js and modified index.html to include it, also made some minor adjustments to style.css for better responsiveness.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Your Name - Software Engineer & Cybersecurity Professional</title>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;600;700&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="script" src="script.js">
 </head>
 <body>
     <header>
@@ -270,5 +269,6 @@
     </footer>
 
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+    <script src="smoothing.js"></script>
 </body>
 </html>
