source: /home/radical0xed/Git/CV/my-cv-site/index.html add download links for resumes

--- a/my-cv-site/index.html
+++ b/my-cv-site/index.html
@@ -254,8 +254,9 @@
             <div class="container">
                 <h2>Download Resume</h2>
                 <div class="download-buttons">
-                    <a href="#" class="btn">Programming Resume</a>
-                    <a href="#" class="btn">Cybersecurity Resume</a>
+                  <!-- NEW -->
+                    <a href="downloads/Programming-Resume.docx" class="btn" download>Programming Resume</a>
+                    <a href="downloads/Cybersecurity-Resume.docx" class="btn" download>Cybersecurity Resume</a>
                 </div>
             </div>
         </section>
